--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
    </head>
    <body>
-     <h1>vist norway</h1>
+     <h1>vist norway or else</h1>
      <br/>
      <hr/>
      <p><big>This</big> is NORWAY,one of the most scenick places on earth.</p>
